# HTW-CE-M14

./: Stakeholder Needs.xlsx  readme.md
RobotControl/: Axis.cpp  CMakeLists.txt  Readme.md  Robot.cpp  Robot.h  RobotInput.cpp  RobotMain.cpp  RobotOutput.cpp  RobotSimulate.cpp  RobotSimulate.h  Ui.cpp  Ui.h  conanfile.txt  initial-setup-ubuntu.sh
RobotControl/apps/SoftwareUi/: CMakeLists.txt  RobotInput.cpp  RobotInput.h  RobotMain.cpp  RobotOutput.cpp  RobotOutput.h
RobotControl/src/RobotControlLib/: Axis.h  CMakeLists.txt  Robot.cpp  Robot.h  RobotControl.cpp  RobotControl.h  Ui.cpp  Ui.h
RobotControl/src/RobotSimulateLib/: CMakeLists.txt  RobotSimulate.cpp  RobotSimulate.h
RobotControl/tests/RobotControlLibTest/: CMakeLists.txt  tests-control.cpp
global_struct/: CMakeLists.txt  global_struct.cpp
global_struct_catch2/: CMakeLists.txt  global_struct.h  global_struct_test.cpp
global_struct_gtest/: CMakeLists.txt  global_struct_test.cpp
